<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR Code Reader</string>
    <string name="open_qr_code">Open QR code</string>

    <string name="str_image">image</string>
    <string name="str_qrcode">QR code</string>
    <string name="dir_images">Images</string>
    <string name="dir_qrcodes">QR Codes</string>
    
    <string name="QRReaderActivity_StatusText_Capturing">(capturing image)</string>
    <string name="QRReaderActivity_StatusText_Saving">(saving image)</string>
    <string name="QRReaderActivity_StatusText_Processing">(processing image)</string>
    <string name="QRReaderActivity_PreviewFPS_TextView">Preview FPS:</string>
    <string name="QRReaderActivity_DetectionFPS_TextView">Detection FPS:</string>
    
    <string name="QRReaderAboutActivity_Title">About application</string>
    <string name="QRReaderAboutActivity_License">License</string>
    <string name="QRReaderAboutActivity_License_Text">GNU General Public License, version 3.0</string>
    <string name="QRReaderAboutActivity_Author">Author</string>
    <string name="QRReaderAboutActivity_Author_Text">Radim Loskot</string>
    <string name="QRReaderAboutActivity_Summary">Summary</string>
    <string name="QRReaderAboutActivity_Summary_Text">Application QR Reader for Android serves for the detection of the QR codes in the real-time camera preview and decoding of the QR codes on demand.</string>
    <string name="QRReaderAboutActivity_Features">Support of the features</string>
    <string name="QRReaderAboutActivity_Miscellaneous_Informations">Miscellaneous informations</string>
    
    <string name="QRReaderOpenQrActivity_SaveImageButtonText">Save image</string>
    <string name="QRReaderOpenQrActivity_SaveQRCodeButtonText">Save QR code</string>
    <string name="QRReaderOpenQrActivity_SaveBothButtonText">Save both</string>
    
    <string name="InstallationManagerActivity_unknown">(unknown)</string>
    <string name="InstallationManagerActivity_brief">Brief:</string>
    <string name="InstallationManagerActivity_uninstall">Uninstall</string>
    <string name="InstallationManagerActivity_packageManager">Package manager</string>
    <string name="InstallationManagerActivity_path">Package path:</string>
    <string name="InstallationManagerActivity_install">Install</string>
    <string name="InstallationManagerActivity_browse">Browse</string>
    <string name="InstallationManagerActivity_pickFileTitle">Please pick your package</string>
    
    <string name="OpenQrActivity_Title_QrFound">QR code found</string>
    <string name="OpenQrActivity_Title_QrNoFound">QR code not found</string>
    <string name="OpenQrActivity_SubTitle_NoDecoder">(but proper decoder not found)</string>
    <string name="OpenQrActivity_SubTitle_NoView">(but proper view not found)</string>
    <string name="OpenQrActivity_RawResult_TextTitle">RAW text:</string>
    <string name="OpenQrActivity_RawResult_DataTitle">RAW data:</string>
    <string name="OpenQrActivity_RawResult_TextNone">(none)</string>
    <string name="OpenQrActivity_RawResult_DataNone">(none)</string>
    <string name="OpenQrActivity_RawResult_TryLuck">Try luck!</string>
    <string name="OpenQrActivity_RawResult_TryLuckBrief">Tries to send the decoded text as an intent action. This action might be captured by 3rd party application which can handle this decoded QR code.</string>
    <string name="OpenQrActivity_RawResult_TryLuckWith">Try luck with?</string>
    <string name="OpenQrActivity_Decode_Warning">Error correction failed. Decoded QR code might be invalid.</string>
    
    <string name="QrCode_Title_Url">(URL link)</string>
    <string name="QrCode_Title_Url_GoTo">Go to</string>
    
    <string name="QrCode_Title_Mail">(mail)</string>
    <string name="QrCode_Title_Mail_Receiver">Receiver</string>
    <string name="QrCode_Title_Mail_Subject">Subject</string>
    <string name="QrCode_Title_Mail_Body">Body</string>
    <string name="QrCode_Title_Mail_Send">Send mail</string>
    
    <string name="QrCode_Title_Sms">(SMS)</string>
    <string name="QrCode_Title_Sms_Receiver">Receiver number</string>
    <string name="QrCode_Title_Sms_Body">Content</string>
    <string name="QrCode_Title_Sms_Send">Send SMS</string>
    <string name="QrCode_Title_Sms_Sending">Sending SMS...</string>
    <string name="QrCode_Title_Sms_Sending_Error">Unable to send SMS, try it later!</string>
    <string name="QrCode_Title_Sms_Sending_Success">SMS has been successfully sent.</string>
    <string name="QrCode_Title_Sms_Sending_NoReciever">No receiver specified!</string>
    <string name="QrCode_Title_Sms_Sending_NoBody">No body specified!</string>
    
    <string name="QrCode_Title_Telephone">(telephone)</string>
    <string name="QrCode_Title_Telephone_Number">Telephone number</string>
    <string name="QrCode_Title_Telephone_Call">CALL</string>
    
    <string name="QrCode_Title_Text">(text)</string>
    <string name="QrCode_Title_Text_Send_Sms">Send SMS</string>
    <string name="QrCode_Title_Text_Send_Mail">Send mail</string>   
    <string name="QrCode_Title_Text_Read_Text">Decoded text:</string>  
    <string name="QrCode_Title_Text_Send_As_Action">Send as action</string>
    
    <string name="QrCode_Title_Contact">(contact)</string>
</resources>