<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/linearLayout1"
	        android:text="@string/QrCode_Title_Sms_Receiver"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/receiverEdit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:focusableInTouchMode="true"
	        android:inputType="phone" >

    	</EditText>

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QrCode_Title_Sms_Body"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/bodyEdit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:focusableInTouchMode="true"
	        android:lines="5"
	        android:inputType="textMultiLine" />
	    
	    <Button
	        android:id="@+id/sendSms"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/QrCode_Title_Sms_Send" />

    </LinearLayout>



</RelativeLayout>