<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="5dp" >
	
	    <TextView
	        android:id="@+id/about"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/QRReaderAboutActivity_Title"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/summary"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Summary"
	        android:paddingTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/summaryText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Summary_Text"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:paddingLeft="20dp" />
	    
	    <TextView
	        android:id="@+id/author"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Author"
	        android:paddingTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/authorText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Author_Text"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:paddingLeft="20dp" />
	    
	    <TextView
	        android:id="@+id/license"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_License"
	        android:paddingTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/licenseText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_License_Text"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:paddingLeft="20dp" />
	    
	    <TextView
	        android:id="@+id/features"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Features"
	        android:paddingTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:paddingLeft="20dp"
	            android:paddingRight="10dp"
	            android:orientation="vertical" >
	            	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Camera flash"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- automatic"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:paddingLeft="5dp" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- always use"
			        android:paddingLeft="5dp" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- red eyes"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:paddingLeft="5dp" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- torch"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:paddingLeft="5dp" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="Camera auto-focus"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="OI File Manager availability"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            
	            <TextView
	                android:id="@+id/CameraFlash"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/CameraFlashAuto"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/CameraFlashOn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/CameraFlashRedEyes"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
	                android:id="@+id/CameraFlashTorch"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/CameraAutoFocus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/OIFileManager"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/no"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	        </LinearLayout>
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/miscellaneousInformations"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/QRReaderAboutActivity_Miscellaneous_Informations"
	        android:paddingTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:paddingLeft="20dp"
	            android:paddingRight="10dp"
	            android:orientation="vertical" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Camera"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- default preview size"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:paddingLeft="5dp" />
	            
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="- preview color format"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:paddingLeft="5dp" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            
	            <TextView
	                android:id="@+id/MiscellaneousCamera"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            <TextView
			        android:id="@+id/MiscellaneousCameraPreviewSize"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="X:X"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	            
	            <TextView
			        android:id="@+id/MiscellaneousCameraPreviewColorFormat"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="X"
			        android:textAppearance="?android:attr/textAppearanceSmall" />
	        </LinearLayout>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>